<resources>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab eum expedita fugiat mollitia quia rerum tempore. Aliquam at debitis ipsam iusto odio.</string>
    <string name="app_name">Virtual Diary</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="select_date">Select Date: </string>
    <string name="pref_key_font_size">font_size</string>
    <string name="pref_key_color">color</string>
    <string name="pref_key_font">font</string>

    <string name="settings_title">Settings</string>
    <string name="font_color_settings_title">Font Color</string>

    <string name="notification_intro">It is really easy to forget about writing notes.
    Let us remind you by sending notifications!</string>
    <string name="notification_delay_value">notification</string>

    <string name="priority_prompt">Priority</string>
    <string name="share_menu">Share</string>
    <string name="search_hint">Search task</string>
    <string name="task_to_be_done">Task to be done</string>
    <string name="enter_task_here">Enter task here..</string>
    <string name="due_date">Due date</string>
    <string name="date_not_set">Date not set</string>
    <string name="time_not_set">Time not set</string>
    <string name="enter_priority">Enter priority</string>
    <string name="click_to_set_date">Click to set date</string>
    <string name="click_to_set_time">Click to set time</string>
    <string name="cancel_date">cancel date</string>
    <string name="cancel_time">cancel time</string>
    <string name="save_item">Save</string>
    <string name="share_item">Share</string>
    <string name="delete_items">delete items</string>
    <string name="confirm_delete">CONFIRM DELETE</string>

    <string name="toast_deleted">Deleted!</string>
    <string name="toast_successful">Successful!</string>
    <string name="toast_failed">Failed!</string>
    <string name="toast_backup_successful">Backup successful!</string>
    <string name="toast_backup_failed">Backup failed!</string>
    <string name="toast_restored">Restored</string>
    <string name="toast_field_empty">Fields cannot be empty</string>
    <string name="toast_four_digit">PIN should be at least 4 digits or more</string>
    <string name="toast_pin_saved">PIN saved!</string>
    <string name="toast_pin_mismatch">PINs don\'t match</string>
    <string name="toast_old_pin_empty">Old PIN can\'t be empty</string>
    <string name="toast_incorrect_old_pin">Incorrect old PIN</string>

    <string name="priority_low">Low</string>
    <string name="priority_med">Medium</string>
    <string name="priority_high">High</string>

    <string name="dialog_backing_up_data">Backing up your data…</string>
    <string name="dialog_restoring_data">Restoring your data…</string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_msg_note_single_delete">Do you want to delete this note?</string>
    <string name="dialog_title_save_changes">Do you want to save the changes?</string>
    <string name="dialog_msg_todo_single_delete">Do you want to delete this to-do?</string>
    <string name="dialog_msg_todo_multi_delete">The marked items will be deleted</string>
    <string name="dialog_btn_save">Save</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_choose_font">Choose your custom font</string>

    <string name="label_font_style">Font Style</string>
    <string name="label_font_color">Font Color</string>
    <string name="label_font_size">Font Size</string>

    <string name="not_signed_in">Not signed in</string>
    <string name="sign_in">Sign in</string>
    <string name="wait">Please wait…</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="sign_in_warning">Please sign in first</string>
    <string name="change_account">Change account</string>
    <string name="todo_name">To-Do</string>
    <string name="note_month_picker_title">Select Month For Notes</string>
    <string name="dialog_title_choose_font">Choose your custom font</string>
    <string name="title_pref_passcode_lock">Passcode Lock</string>
    <string name="pref_key_password">pass</string>
    <string name="pref_key_is_password_activated">isPasswordOn</string>
    <string name="pref_title_activate_password">Enable Password Protection</string>
    <string name="pref_title_font_color">Font Color</string>
    <string name="pref_title_font_size">Font Size</string>
    <string name="pref_title_display_font">Display Font</string>
    <string name="pref_title_profile">Profile</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_about_app">About this app</string>
    <string name="pref_key_about">about</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_title_about">About</string>
    <string name="dialog_msg_about">Developed by Mahfuz Ahmed\nContact: mahfuz.sust.cse@gmail.com</string>
    <string name="dialog_btn_rate_this_app">Rate This App</string>
    <string name="toast_note_deleted_successfully">Note deleted successfully</string>
    <string name="toast_note_saved_successfully">Note saved successfully</string>
    <string name="pref_title_set_change_password">Set/Change Password</string>
    <string name="prompt_no_title">(no title)</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_title_enable_notification">Enable Notification</string>
    <string name="pref_key_notification_switch">notification_switch_value</string>
</resources>
